--- a/package.json
+++ b/package.json
@@ -2,13 +2,37 @@
   "name": "allenice-blog",
   "version": "0.0.0",
   "private": true,
+  "homepage": "https://github.com/allenice1565/allenice-blog#readme",
+  "bugs": {
+    "url": "https://github.com/allenice1565/allenice-blog/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/allenice1565/allenice-blog.git"
+  },
+  "funding": "https://github.com/sponsors/allenice1565",
+  "author": {
+    "name": "lxc",
+    "email": "longxc@go-goal.com"
+  },
   "type": "module",
   "scripts": {
     "build": "vue-tsc && vite build",
     "dev": "vite",
     "lint": "eslint . && stylelint \"**/*.{css,less,scss}\"",
     "lint:fix": "prettier --write . && eslint --fix . && stylelint --fix \"**/*.{css,less,scss}\"",
+    "prepare": "husky install",
     "preview": "vite preview"
+  },
+  "commitlint": {
+    "extends": [
+      "ali"
+    ]
+  },
+  "lint-staged": {
+    "*.{cjs,cts,js,jsx,mjs,mts,ts,tsx,vue}": "eslint --fix",
+    "*.{css,less,scss}": "stylelint --fix",
+    "*.{cjs,css,cts,html,js,json,jsx,less,md,mjs,mts,scss,ts,tsx,vue,yaml,yml}": "prettier --write"
   },
   "prettier": "prettier-config-ali",
   "eslintConfig": {
@@ -24,21 +48,28 @@
     ]
   },
   "dependencies": {
-    "vue": "^3.4.27"
+    "vue": "^3.4.27",
+    "vue-router": "4"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.3.0",
+    "@types/node": "^20.12.12",
     "@vitejs/plugin-vue": "^5.0.4",
+    "commitlint-config-ali": "^1.1.0",
     "eslint": "^8.57.0",
     "eslint-config-ali": "^15.0.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "husky": "^8.0.3",
+    "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
     "prettier-config-ali": "^1.3.2",
     "stylelint": "^16.5.0",
     "stylelint-config-ali": "^2.1.1",
     "stylelint-prettier": "^5.0.0",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5",
     "vite": "^5.2.11",
-    "vue-tsc": "^2.0.16"
+    "vue-tsc": "^2.0.17"
   }
 }
