--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     ]
   },
   "dependencies": {
+    "@vueuse/core": "^10.9.0",
     "vue": "^3.4.27",
     "vue-router": "4"
   },
@@ -55,6 +56,8 @@
     "@commitlint/cli": "^19.3.0",
     "@types/node": "^20.12.12",
     "@vitejs/plugin-vue": "^5.0.4",
+    "@wangeditor/editor": "^5.1.23",
+    "@wangeditor/editor-for-vue": "^5.1.12",
     "commitlint-config-ali": "^1.1.0",
     "eslint": "^8.57.0",
     "eslint-config-ali": "^15.0.1",
