--- a/package.json
+++ b/package.json
@@ -39,11 +39,13 @@
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-vue": "^9.26.0",
     "husky": "^8.0.3",
     "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5",
+    "unplugin-auto-import": "^0.17.6",
     "vite": "^5.2.11",
     "vue-tsc": "^2.0.17"
   }
