--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,7 @@
   "include": [
     "./vite.config.ts",
     "./tailwind.config.js",
+    "./auto-imports.d.ts",
     "src/custom-types.d.ts",
     "src/**/*.ts",
     "src/**/*.tsx",
