--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,7 +3,6 @@
     "Vue.volar",
     "dbaeumer.vscode-eslint",
     "editorconfig.editorconfig",
-    "esbenp.prettier-vscode",
-    "stylelint.vscode-stylelint"
+    "esbenp.prettier-vscode"
   ]
 }
