--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
+    "@typescript-eslint/parser": "^7.9.0",
     "@vitejs/plugin-vue": "^5.0.4",
     "@wangeditor/editor": "^5.1.23",
     "@wangeditor/editor-for-vue": "^5.1.12",
@@ -47,6 +48,7 @@
     "typescript": "^5.4.5",
     "unplugin-auto-import": "^0.17.6",
     "vite": "^5.2.11",
+    "vue-eslint-parser": "^9.4.2",
     "vue-tsc": "^2.0.17"
   }
 }
