文章编辑页：修改工具栏，支持公式编辑

--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   },
   "dependencies": {
     "@vueuse/core": "^10.9.0",
+    "@wangeditor/plugin-formula": "^1.0.11",
+    "katex": "^0.16.10",
     "vue": "^3.4.27",
     "vue-router": "4"
   },
