--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@vueuse/core": "^10.9.0",
     "@wangeditor/plugin-formula": "^1.0.11",
     "bytemd": "^1.21.0",
+    "juejin-markdown-themes": "^1.34.0",
     "katex": "^0.16.10",
     "vue": "^3.4.27",
     "vue-router": "4",
