--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
         "docs/**/*.{js,vue,md}": "prettier --write"
     },
     "devDependencies": {
+        "@commitlint/cli": "^19.3.0",
+        "@commitlint/config-conventional": "^19.2.2",
+        "@commitlint/format": "^19.3.0",
         "@typescript-eslint/eslint-plugin": "^6.4.0",
         "eslint": "^8.57.0",
         "eslint-config-prettier": "^9.1.0",
