--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
         "@commitlint/config-conventional": "^19.2.2",
         "@commitlint/format": "^19.3.0",
         "@typescript-eslint/eslint-plugin": "^6.4.0",
+        "conventional-changelog-atom": "^5.0.0",
         "eslint": "^8.57.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-config-standard-with-typescript": "^43.0.1",
         "eslint-plugin-import": "^2.25.2",
         "eslint-plugin-markdown": "^5.1.0",
         "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
+        "eslint-plugin-prettier": "^5.2.1",
         "eslint-plugin-promise": "^6.0.0",
         "eslint-plugin-vue": "^9.27.0",
         "husky": "^9.1.3",
