--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
         "@commitlint/config-conventional": "^19.2.2",
         "@commitlint/format": "^19.3.0",
         "@typescript-eslint/eslint-plugin": "^6.4.0",
+        "commitizen": "^4.3.0",
         "conventional-changelog-atom": "^5.0.0",
+        "cz-conventional-changelog": "^3.3.0",
         "eslint": "^8.57.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-config-standard-with-typescript": "^43.0.1",
@@ -29,5 +31,10 @@
         "prettier": "^3.3.3",
         "typescript": "*",
         "vitepress": "^1.3.1"
+    },
+    "config": {
+        "commitizen": {
+            "path": "./node_modules/cz-conventional-changelog"
+        }
     }
 }
